overflow of the testimonials fixed and footer modified

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
-/* :root {
-  --background: #ffffff;
-  --foreground: #171717;
+body{
+scroll-behavior: smooth;
+}
+/* Set scrollbar width */
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+/* Style scrollbar track */
+::-webkit-scrollbar-track {
+  background-color: #331906;
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+/* Style scrollbar thumb */
+::-webkit-scrollbar-thumb {
+  background-color: white;
+  border-radius: 4px;
 }
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
-} */
+::-webkit-scrollbar-thumb:hover {
+  background-color: grey;
+  cursor: grab;
+}
